feat(api): implemented ticket APIs
